close a toolbox on mouse ress anywhere

BUG:260964
FIXED-IN:4.9